--- a/openvidu-server/docker/openvidu-proxy/default_nginx_conf/ce/support_deprecated_api/default-app-without-demos.conf
+++ b/openvidu-server/docker/openvidu-proxy/default_nginx_conf/ce/support_deprecated_api/default-app-without-demos.conf
@@ -1,7 +1,7 @@
-# Openvidu call
-upstream yourapp {
-    server localhost:5442;
-}
+# Your app
+#upstream yourapp {
+#    server localhost:5442;
+#}
 
 upstream openviduserver {
     server localhost:5443;
@@ -39,12 +39,12 @@ server {
     proxy_set_header Connection "upgrade";
 
     # Welcome
-    #root /var/www/html;
+    root /var/www/html;
 
     # Your app
-    location / {
-        proxy_pass http://yourapp; # Openvidu call by default
-    }
+    #location / {
+    #    proxy_pass http://yourapp; # Openvidu call by default
+    #}
 
     #################################
     # Common rules                  #
@@ -58,6 +58,47 @@ server {
 
     # Websocket rule
     location ~ /openvidu$ {
+        proxy_pass http://openviduserver;
+    }
+
+    #################################
+    # Deprecated API                #
+    #################################
+    # Openvidu Server
+    location /layouts/custom {
+        rewrite ^/layouts/custom/(.*)$ /custom-layout/$1 break;
+        root /opt/openvidu;
+    }
+
+    location /recordings {
+        proxy_pass http://openviduserver;
+    }
+
+    location /api {
+        {rules_acess_api}
+        deny all;
+        proxy_pass http://openviduserver;
+    }
+
+    location /info {
+        {rules_access_dashboard}
+        deny all;
+        proxy_pass http://openviduserver;
+    }
+
+    location /config {
+        {rules_acess_api}
+        deny all;
+        proxy_pass http://openviduserver;
+    }
+
+    location /accept-certificate {
+        proxy_pass http://openviduserver;
+    }
+
+    location /cdr {
+        {rules_acess_api}
+        deny all;
         proxy_pass http://openviduserver;
     }
 
