--- a/openvidu-server/docker/openvidu-proxy/default_nginx_conf/pro/default.conf
+++ b/openvidu-server/docker/openvidu-proxy/default_nginx_conf/pro/default.conf
@@ -82,7 +82,9 @@ server {
         proxy_pass http://yourapp; # Openvidu call by default
     }
 
-    # Openvidu Admin Panel
+    #################################
+    # Common rules                  #
+    #################################
     location /dashboard {
         {rules_access_dashboard}
         deny all;
@@ -96,6 +98,10 @@ server {
         proxy_pass http://openviduserver;
     }
 
+    location ~ /openvidu$ {
+        proxy_pass http://openviduserver;
+    }
+
     location /kibana {
         {rules_access_dashboard}
         deny all;
@@ -104,68 +110,58 @@ server {
         proxy_pass http://kibana/;
     }
 
-    # Openvidu Server
-    location /layouts/custom {
-        rewrite ^/layouts/custom/(.*)$ /custom-layout/$1 break;
+    #################################
+    # New API                       #
+    #################################
+    # OpenVidu Server
+    location /openvidu/layouts {
+        rewrite ^/openvidu/layouts/(.*)$ /custom-layout/$1 break;
         root /opt/openvidu;
     }
 
-    location /recordings {
+    location /openvidu/recordings {
         proxy_pass http://openviduserver;
     }
 
-    location /api {
+    location /openvidu/api {
         {rules_acess_api}
         deny all;
         proxy_pass http://openviduserver;
     }
 
-    location ~ /openvidu$ {
-        proxy_pass http://openviduserver;
-    }
-
-    location /info {
+    location /openvidu/info {
         {rules_access_dashboard}
         deny all;
         proxy_pass http://openviduserver;
     }
 
-    location /config {
+    location /openvidu/accept-certificate {
+        proxy_pass http://openviduserver;
+    }
+
+    location /openvidu/cdr {
+        {rules_acess_api}
+        deny all;
+        proxy_pass http://openviduserver;
+    }
+    # OpenVidu Server PRO
+    location /openvidu/elk {
         {rules_acess_api}
         deny all;
         proxy_pass http://openviduserver;
     }
 
-    location /accept-certificate {
-        proxy_pass http://openviduserver;
-    }
-
-    location /cdr {
+    location /openvidu/inspector-api {
         {rules_acess_api}
         deny all;
         proxy_pass http://openviduserver;
     }
 
-    # Openvidu Server Pro
-    location /pro {
-        {rules_acess_api}
-        deny all;
-        proxy_pass http://openviduserver;
-    }
 
-    location /api-login {
-        {rules_acess_api}
-        deny all;
-        proxy_pass http://openviduserver;
-    }
+    #################################
+    # LetsEncrypt                   #
+    #################################
 
-    location /elasticsearch {
-        {rules_acess_api}
-        deny all;
-        proxy_pass http://openviduserver;
-    }
-
-    # letsencrypt
     location /.well-known/acme-challenge {
         root /var/www/certbot;
         try_files $uri $uri/ =404;
