--- a/openvidu-server/docker/openvidu-proxy/default_nginx_conf/pro/support_deprecated_api/default.conf
+++ b/openvidu-server/docker/openvidu-proxy/default_nginx_conf/pro/support_deprecated_api/default.conf
@@ -1,6 +1,14 @@
+add_header X-Frame-Options SAMEORIGIN;
+add_header X-Content-Type-Options nosniff;
+add_header X-XSS-Protection "1; mode=block";
+
 # Openvidu call
 upstream yourapp {
     server localhost:5442;
+}
+
+upstream kibana {
+    server localhost:5601;
 }
 
 upstream openviduserver {
@@ -8,13 +16,41 @@ upstream openviduserver {
 }
 
 server {
-    listen {https_port} ssl;
+    # Redirect to https
+    if ($host = {domain_name}) {
+        rewrite ^(.*) https://{domain_name}:{https_port}$1 permanent;
+    } # managed by Certbot
+
+    listen {http_port} default_server;
+    server_name {domain_name};
+
+    # letsencrypt
+    location /.well-known/acme-challenge {
+        root /var/www/certbot;
+        try_files $uri $uri/ =404;
+    }
+
+    # Kibana panel
+    location /kibana {
+        proxy_http_version 1.1;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection 'upgrade';
+        proxy_set_header Host $host;
+        proxy_cache_bypass $http_upgrade;
+        
+        rewrite ^/kibana/(.*)$ /$1 break;
+        proxy_pass http://kibana/;
+    }
+}
+
+server {
+    listen {https_port} ssl default deferred;
     server_name {domain_name};
 
     ssl_certificate         /etc/letsencrypt/live/{domain_name}/fullchain.pem;
     ssl_certificate_key     /etc/letsencrypt/live/{domain_name}/privkey.pem;
     ssl_trusted_certificate /etc/letsencrypt/live/{domain_name}/fullchain.pem;
-
+    
     ssl_session_cache shared:SSL:50m;
     ssl_session_timeout 5m;
     ssl_stapling on;
@@ -49,21 +85,95 @@ server {
     #################################
     # Common rules                  #
     #################################
-    # Dashboard rule
     location /dashboard {
+        {rules_access_dashboard}
+        deny all;
+        rewrite ^/dashboard/(.*)$ /$1 break;
+        proxy_pass http://openviduserver/;
+    }
+
+    location /inspector {
         {rules_access_dashboard}
         deny all;
         proxy_pass http://openviduserver;
     }
 
-    # Websocket rule
     location ~ /openvidu$ {
+        proxy_pass http://openviduserver;
+    }
+
+    location /kibana {
+        {rules_access_dashboard}
+        deny all;
+
+        rewrite ^/kibana/(.*)$ /$1 break;
+        proxy_pass http://kibana/;
+    }
+
+    #################################
+    # Deprecated API                #
+    #################################
+    # Openvidu Server
+    location /layouts/custom {
+        rewrite ^/layouts/custom/(.*)$ /custom-layout/$1 break;
+        root /opt/openvidu;
+    }
+
+    location /recordings {
+        proxy_pass http://openviduserver;
+    }
+
+    location /api {
+        {rules_acess_api}
+        deny all;
+        proxy_pass http://openviduserver;
+    }
+
+    location /info {
+        {rules_access_dashboard}
+        deny all;
+        proxy_pass http://openviduserver;
+    }
+
+    location /config {
+        {rules_acess_api}
+        deny all;
+        proxy_pass http://openviduserver;
+    }
+
+    location /accept-certificate {
+        proxy_pass http://openviduserver;
+    }
+
+    location /cdr {
+        {rules_acess_api}
+        deny all;
+        proxy_pass http://openviduserver;
+    }
+
+    # Openvidu Server Pro
+    location /pro {
+        {rules_acess_api}
+        deny all;
+        proxy_pass http://openviduserver;
+    }
+
+    location /api-login {
+        {rules_acess_api}
+        deny all;
+        proxy_pass http://openviduserver;
+    }
+
+    location /elasticsearch {
+        {rules_acess_api}
+        deny all;
         proxy_pass http://openviduserver;
     }
 
     #################################
     # New API                       #
     #################################
+    # OpenVidu Server
     location /openvidu/layouts {
         rewrite ^/openvidu/layouts/(.*)$ /custom-layout/$1 break;
         root /opt/openvidu;
@@ -94,10 +204,24 @@ server {
         deny all;
         proxy_pass http://openviduserver;
     }
+    # OpenVidu Server PRO
+    location /openvidu/elk {
+        {rules_acess_api}
+        deny all;
+        proxy_pass http://openviduserver;
+    }
+
+    location /openvidu/inspector-api {
+        {rules_acess_api}
+        deny all;
+        proxy_pass http://openviduserver;
+    }
+
 
     #################################
     # LetsEncrypt                   #
     #################################
+
     location /.well-known/acme-challenge {
         root /var/www/certbot;
         try_files $uri $uri/ =404;
