--- a/openvidu-server/deployments/ce/docker-compose/docker-compose.yml
+++ b/openvidu-server/deployments/ce/docker-compose/docker-compose.yml
@@ -74,7 +74,7 @@ services:
             - MAX_PORT=65535
 
     nginx:
-        image: openvidu/openvidu-proxy:3.0.0
+        image: openvidu/openvidu-proxy:4.0.0-beta1
         restart: on-failure
         network_mode: host
         volumes:
@@ -91,3 +91,4 @@ services:
             - ALLOWED_ACCESS_TO_RESTAPI=${ALLOWED_ACCESS_TO_RESTAPI:-}
             - PROXY_MODE=CE
             - WITH_APP=true
+            - SUPPORT_DEPRECATED_API=${SUPPORT_DEPRECATED_API:-true}
