--- a/openvidu-server/docker/openvidu-proxy/default_nginx_conf/ce/default-app-without-demos.conf
+++ b/openvidu-server/docker/openvidu-proxy/default_nginx_conf/ce/default-app-without-demos.conf
@@ -46,56 +46,58 @@ server {
     #    proxy_pass http://yourapp; # Openvidu call by default
     #}
 
-    # Openvidu Admin Panel
+    #################################
+    # Common rules                  #
+    #################################
+    # Dashboard rule
     location /dashboard {
         {rules_access_dashboard}
         deny all;
         proxy_pass http://openviduserver;
     }
-    
-    # Openvidu Server
-    location /layouts/custom {
-        rewrite ^/layouts/custom/(.*)$ /custom-layout/$1 break;
-        root /opt/openvidu;
-    }
 
-    location /recordings {
+    # Websocket rule
+    location ~ /openvidu$ {
         proxy_pass http://openviduserver;
     }
 
-    location /api {
+    #################################
+    # New API                       #
+    #################################
+    location /openvidu/layouts {
+        rewrite ^/openvidu/layouts/(.*)$ /custom-layout/$1 break;
+        root /opt/openvidu;
+    }
+
+    location /openvidu/recordings {
+        proxy_pass http://openviduserver;
+    }
+
+    location /openvidu/api {
         {rules_acess_api}
         deny all;
         proxy_pass http://openviduserver;
     }
 
-    location ~ /openvidu$ {
-        proxy_pass http://openviduserver;
-    }
-
-    location /info {
+    location /openvidu/info {
         {rules_access_dashboard}
         deny all;
         proxy_pass http://openviduserver;
     }
 
-    location /config {
+    location /openvidu/accept-certificate {
+        proxy_pass http://openviduserver;
+    }
+
+    location /openvidu/cdr {
         {rules_acess_api}
         deny all;
         proxy_pass http://openviduserver;
     }
 
-    location /accept-certificate {
-        proxy_pass http://openviduserver;
-    }
-
-    location /cdr {
-        {rules_acess_api}
-        deny all;
-        proxy_pass http://openviduserver;
-    }
-
-    # letsencrypt
+    #################################
+    # LetsEncrypt                   #
+    #################################
     location /.well-known/acme-challenge {
         root /var/www/certbot;
         try_files $uri $uri/ =404;
