--- a/openvidu-server/deployments/pro/docker-compose/openvidu-server-pro/docker-compose.yml
+++ b/openvidu-server/deployments/pro/docker-compose/openvidu-server-pro/docker-compose.yml
@@ -55,7 +55,7 @@ services:
             - REDIS_PASSWORD=${OPENVIDU_SECRET}
 
     coturn:
-        image: openvidu/openvidu-coturn:2.0.0-dev1
+        image: openvidu/openvidu-coturn:2.0.0-dev2
         restart: on-failure
         network_mode: host
         environment:
@@ -63,11 +63,12 @@ services:
             - TURN_LISTEN_PORT=3478
             - DB_NAME=0
             - DB_PASSWORD=${OPENVIDU_SECRET}
-            - MIN_PORT=57001
+            - MIN_PORT=40000
             - MAX_PORT=65535
+            - TURN_PUBLIC_IP=auto
 
     nginx:
-        image: openvidu/openvidu-proxy:4.0.0-beta1
+        image: openvidu/openvidu-proxy:4.0.0-dev3
         restart: on-failure
         network_mode: host
         volumes:
