--- a/openvidu-server/deployments/pro/docker-compose/openvidu-server-pro/.env
+++ b/openvidu-server/deployments/pro/docker-compose/openvidu-server-pro/.env
@@ -42,6 +42,9 @@ LETSENCRYPT_EMAIL=user@example.com
 # SDKs, REST clients and browsers will have to connect to this port
 # HTTPS_PORT=443
 
+# If true request to with www will be redirected to non-www requests
+# REDIRECT_WWW=false
+
 # Access restrictions
 # In this section you will be able to restrict the IPs from which you can access to
 # Openvidu API and the Administration Panel
