--- a/openvidu-server/deployments/pro/docker-compose/openvidu-server-pro/docker-compose.yml
+++ b/openvidu-server/deployments/pro/docker-compose/openvidu-server-pro/docker-compose.yml
@@ -86,6 +86,7 @@ services:
             - PROXY_MODE=PRO
             - WITH_APP=true
             - SUPPORT_DEPRECATED_API=${SUPPORT_DEPRECATED_API:-true}
+            - REDIRECT_WWW=${REDIRECT_WWW:-false}
 
     elasticsearch:
         image: docker.elastic.co/elasticsearch/elasticsearch:7.8.0
