--- a/openvidu-server/docker/openvidu-proxy/default_nginx_conf/pro/default.conf
+++ b/openvidu-server/docker/openvidu-proxy/default_nginx_conf/pro/default.conf
@@ -2,10 +2,7 @@ add_header X-Frame-Options SAMEORIGIN;
 add_header X-Content-Type-Options nosniff;
 add_header X-XSS-Protection "1; mode=block";
 
-# Openvidu call
-upstream yourapp {
-    server localhost:5442;
-}
+{app_upstream}
 
 upstream kibana {
     server localhost:5601;
@@ -47,116 +44,20 @@ server {
     listen {https_port} ssl default deferred;
     server_name {domain_name};
 
-    ssl_certificate         /etc/letsencrypt/live/{domain_name}/fullchain.pem;
-    ssl_certificate_key     /etc/letsencrypt/live/{domain_name}/privkey.pem;
-    ssl_trusted_certificate /etc/letsencrypt/live/{domain_name}/fullchain.pem;
+    {ssl_config}
     
-    ssl_session_cache shared:SSL:50m;
-    ssl_session_timeout 5m;
-    ssl_stapling on;
-    ssl_stapling_verify on;
+    {proxy_config}
 
-    ssl_protocols TLSv1 TLSv1.1 TLSv1.2 TLSv1.3;
-    ssl_ciphers "ECDHE-ECDSA-AES128-GCM-SHA256:ECDHE-ECDSA-AES256-GCM-SHA384:ECDHE-ECDSA-CHACHA20-POLY1305:ECDHE-RSA-CHACHA20-POLY1305:ECDHE-RSA-AES256-GCM-SHA384:ECDHE-RSA-AES128-GCM-SHA256:DHE-RSA-AES256-GCM-SHA384:DHE-RSA-AES128-GCM-SHA256:ECDHE-RSA-AES256-SHA384:ECDHE-RSA-AES128-SHA256:ECDHE-RSA-AES256-SHA:ECDHE-RSA-AES128-SHA:DHE-RSA-AES256-SHA256:DHE-RSA-AES128-SHA256:DHE-RSA-AES256-SHA:DHE-RSA-AES128-SHA:ECDHE-RSA-DES-CBC3-SHA:EDH-RSA-DES-CBC3-SHA:AES256-GCM-SHA384:AES128-GCM-SHA256:AES256-SHA256:AES128-SHA256:AES256-SHA:AES128-SHA:DES-CBC3-SHA:HIGH:!aNULL:!eNULL:!EXPORT:!DES:!MD5:!PSK:!RC4";
+    {app_config}
 
-    ssl_prefer_server_ciphers on;
+    ########################
+    # OpenVidu Locations   #
+    ########################
+    {common_api_pro}
 
-    proxy_set_header Host $host;
-    proxy_set_header X-Real-IP $remote_addr;
-    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-    proxy_set_header X-Forwarded-Proto $scheme;
-    proxy_set_header X-Forwarded-Proto https;
-    proxy_headers_hash_bucket_size 512;
-    proxy_redirect off;
+    {deprecated_api_pro}
 
-    # Websockets
-    proxy_http_version 1.1;
-    proxy_set_header Upgrade $http_upgrade;
-    proxy_set_header Connection "upgrade";
-
-    # Welcome
-    #root /var/www/html;
-
-    # Your app
-    location / {
-        proxy_pass http://yourapp; # Openvidu call by default
-    }
-
-    #################################
-    # Common rules                  #
-    #################################
-    location /dashboard {
-        {rules_access_dashboard}
-        deny all;
-        rewrite ^/dashboard/(.*)$ /$1 break;
-        proxy_pass http://openviduserver/;
-    }
-
-    location /inspector {
-        {rules_access_dashboard}
-        deny all;
-        proxy_pass http://openviduserver;
-    }
-
-    location ~ /openvidu$ {
-        proxy_pass http://openviduserver;
-    }
-
-    location /kibana {
-        {rules_access_dashboard}
-        deny all;
-
-        rewrite ^/kibana/(.*)$ /$1 break;
-        proxy_pass http://kibana/;
-    }
-
-    #################################
-    # New API                       #
-    #################################
-    # OpenVidu Server
-    location /openvidu/layouts {
-        rewrite ^/openvidu/layouts/(.*)$ /custom-layout/$1 break;
-        root /opt/openvidu;
-    }
-
-    location /openvidu/recordings {
-        proxy_pass http://openviduserver;
-    }
-
-    location /openvidu/api {
-        {rules_acess_api}
-        deny all;
-        proxy_pass http://openviduserver;
-    }
-
-    location /openvidu/info {
-        {rules_access_dashboard}
-        deny all;
-        proxy_pass http://openviduserver;
-    }
-
-    location /openvidu/accept-certificate {
-        proxy_pass http://openviduserver;
-    }
-
-    location /openvidu/cdr {
-        {rules_acess_api}
-        deny all;
-        proxy_pass http://openviduserver;
-    }
-    # OpenVidu Server PRO
-    location /openvidu/elk {
-        {rules_acess_api}
-        deny all;
-        proxy_pass http://openviduserver;
-    }
-
-    location /openvidu/inspector-api {
-        {rules_acess_api}
-        deny all;
-        proxy_pass http://openviduserver;
-    }
-
+    {new_api_pro}
 
     #################################
     # LetsEncrypt                   #
