openvidu-deployment: General updates in nginx and public ip discovering: - Add option to redirect www to non-www (REDIRECT_WWW). - Add endpoint to check nginx workers. - Custom virtual hosts (Server blocks) can be added by the user to create custom rules in `/opt/openvidu/custom-nginx-vhost`. - Parametrize `worker_connections` in nginx.conf (WORKER_CONNECTIONS) - Improve `discover_my_public_ip.sh` to use dns servers instead of http servers - Posibility to autodiscover ipv6 if available by using `PUBLIC_IP=auto-ipv6` in nginx, `TURN_PUBLIC_IP=auto-ipv6` in coturn and `COTURN_IP=auto-ipv6` in openvidu-server. By default ipv4 is used.

--- a/openvidu-server/deployments/ce/docker-compose/.env
+++ b/openvidu-server/deployments/ce/docker-compose/.env
@@ -40,7 +40,13 @@ LETSENCRYPT_EMAIL=user@example.com
 # HTTPS_PORT=443
 
 # If true request to with www will be redirected to non-www requests
+# Default value is false
 # REDIRECT_WWW=false
+
+# How many workers to configure in nginx proxy. 
+# The more workers, the more requests will be handled
+# Default value is 10240
+# WORKER_CONNECTIONS=10240
 
 # Access restrictions
 # In this section you will be able to restrict the IPs from which you can access to
