--- a/openvidu-server/docker/openvidu-proxy/default_nginx_conf/ce/default.conf
+++ b/openvidu-server/docker/openvidu-proxy/default_nginx_conf/ce/default.conf
@@ -1,3 +1,9 @@
+{app_upstream}
+
+upstream openviduserver {
+    server localhost:5443;
+}
+
 server {
     listen {http_port};
     server_name {domain_name};
@@ -10,5 +16,39 @@ server {
     # letsencrypt
     location /.well-known/acme-challenge/ {
         root /var/www/certbot;
+    }
+
+    {nginx_status}
+}
+
+{redirect_www}
+
+{redirect_www_ssl}
+
+server {
+    listen {https_port} ssl;
+    server_name {domain_name};
+
+    {ssl_config}
+
+    {proxy_config}
+
+    {app_config}
+
+    ########################
+    # OpenVidu Locations   #
+    ########################
+    {common_api_ce}
+
+    {deprecated_api_ce}
+
+    {new_api_ce}
+
+    #################################
+    # LetsEncrypt                   #
+    #################################
+    location /.well-known/acme-challenge {
+        root /var/www/certbot;
+        try_files $uri $uri/ =404;
     }
 }
