--- a/openvidu-server/docker/openvidu-proxy/default_nginx_conf/pro/default.conf
+++ b/openvidu-server/docker/openvidu-proxy/default_nginx_conf/pro/default.conf
@@ -12,11 +12,15 @@ upstream openviduserver {
     server localhost:5443;
 }
 
+{redirect_www_ssl}
+
 server {
     # Redirect to https
     if ($host = {domain_name}) {
         rewrite ^(.*) https://{domain_name}:{https_port}$1 permanent;
     } # managed by Certbot
+    
+    {redirect_www}
 
     listen {http_port} default_server;
     server_name {domain_name};
@@ -38,6 +42,8 @@ server {
         rewrite ^/kibana/(.*)$ /$1 break;
         proxy_pass http://kibana/;
     }
+
+    {nginx_status}
 }
 
 server {
