--- a/openvidu-server/docker/openvidu-coturn/Dockerfile
+++ b/openvidu-server/docker/openvidu-coturn/Dockerfile
@@ -1,7 +1,7 @@
 FROM ubuntu:16.04
 
 RUN apt-get update \
-    && apt-get install -y coturn curl
+    && apt-get install -y coturn curl dnsutils
 
 COPY ./configuration-files.sh /tmp/
 COPY ./entrypoint.sh /usr/local/bin
