--- a/openvidu-server/deployments/ce/docker-compose/docker-compose.override.yml
+++ b/openvidu-server/deployments/ce/docker-compose/docker-compose.override.yml
@@ -13,7 +13,7 @@ services:
     #
     # --------------------------------------------------------------
     app:
-        image: openvidu/openvidu-call:2.15.0
+        image: openvidu/openvidu-call:2.16.0-dev1
         restart: on-failure
         network_mode: host
         environment: 
