--- a/openvidu-server/deployments/ce/docker-compose/docker-compose.yml
+++ b/openvidu-server/deployments/ce/docker-compose/docker-compose.yml
@@ -39,7 +39,7 @@ services:
             - KMS_URIS=["ws://localhost:8888/kurento"]
             - COTURN_REDIS_IP=127.0.0.1
             - COTURN_REDIS_PASSWORD=${OPENVIDU_SECRET}
-            - COTURN_IP=${COTURN_IP:-auto-ipv4}
+            - COTURN_IP=${PUBLIC_IP:-auto-ipv4}
 
     kms:
         image: ${KMS_IMAGE:-kurento/kurento-media-server:6.14.0}
