--- a/openvidu-server/deployments/pro/docker-compose/openvidu-server-pro/.env
+++ b/openvidu-server/deployments/pro/docker-compose/openvidu-server-pro/.env
@@ -71,6 +71,14 @@ LETSENCRYPT_EMAIL=user@example.com
 # ALLOWED_ACCESS_TO_RESTAPI=198.51.100.1, 198.51.100.0/24
 # ALLOWED_ACCESS_TO_RESTAPI=
 
+# Public IP used by coturn, nginx and openvidu-server
+# Possible values: 
+#    - auto-ipv4: Auto discover public IPv4 using dns services (Default)
+#    - auto-ipv6: Auto discover public IPv6 using dns services
+#    - Any valid IPv4 and IPv6 value
+# PUBLIC_IP=auto-ipv4
+
+
 # Mode of cluster management. Can be auto (OpenVidu manages Media Nodes on its own.
 # Parameter KMS_URIS is ignored) or manual (user must manage Media Nodes. Parameter
 # KMS_URIS is used: if any uri is provided it must be valid)
