deployment-openvidu: delete unnecessary env variables and add media node env variables

--- a/openvidu-server/deployments/pro/docker-compose/openvidu-server-pro/.env
+++ b/openvidu-server/deployments/pro/docker-compose/openvidu-server-pro/.env
@@ -71,14 +71,6 @@ LETSENCRYPT_EMAIL=user@example.com
 # ALLOWED_ACCESS_TO_RESTAPI=198.51.100.1, 198.51.100.0/24
 # ALLOWED_ACCESS_TO_RESTAPI=
 
-# Public IP used by coturn, nginx and openvidu-server
-# Possible values: 
-#    - auto-ipv4: Auto discover public IPv4 using dns services (Default)
-#    - auto-ipv6: Auto discover public IPv6 using dns services
-#    - Any valid IPv4 and IPv6 value
-# PUBLIC_IP=auto-ipv4
-
-
 # Mode of cluster management. Can be auto (OpenVidu manages Media Nodes on its own.
 # Parameter KMS_URIS is ignored) or manual (user must manage Media Nodes. Parameter
 # KMS_URIS is used: if any uri is provided it must be valid)
@@ -278,6 +270,25 @@ OPENVIDU_CDR_PATH=/opt/openvidu/cdr
 # This credentials will aso be valid for Kibana dashboard
 ELASTICSEARCH_USERNAME=elasticadmin
 ELASTICSEARCH_PASSWORD=
+
+# Media Node Configuration
+# --------------------------
+# You can add any KMS environment variable as described in the
+# documentation of the docker image: https://hub.docker.com/r/kurento/kurento-media-server
+# If you want to add an environment variable to KMS, you must add a variable using this prefix: 'KMS_DOCKER_ENV_',
+# followed by the environment variable you want to setup.
+# For example if you want to setup KMS_MIN_PORT to 50000, it would be KMS_DOCKER_ENV_KMS_MIN_PORT=50000
+
+# Docker hub kurento media server: https://hub.docker.com/r/kurento/kurento-media-server
+# Uncomment the next line and define this variable with KMS image that you want use
+# By default, KMS_IMAGE is defined in media nodes and it does not need to be specified unless
+# you want to use an specific version of KMS
+# KMS_IMAGE=kurento/kurento-media-server:6.14.0
+
+# Uncomment the next line and define this variable to change
+# the verbosity level of the logs of KMS
+# Documentation: https://doc-kurento.readthedocs.io/en/stable/features/logging.html
+# KMS_DOCKER_ENV_KMS_DEBUG_LEVEL=3,Kurento*:4,kms*:4,sdp*:4,webrtc*:4,*rtpendpoint:4,rtp*handler:4,rtpsynchronizer:4,agnosticbin:4
 
 # Cloudformation configuration
 # --------------------------
