--- a/openvidu-server/deployments/ce/docker-compose/docker-compose.yml
+++ b/openvidu-server/deployments/ce/docker-compose/docker-compose.yml
@@ -39,7 +39,7 @@ services:
             - KMS_URIS=["ws://localhost:8888/kurento"]
             - COTURN_REDIS_IP=127.0.0.1
             - COTURN_REDIS_PASSWORD=${OPENVIDU_SECRET}
-            - COTURN_IP=${PUBLIC_IP:-auto-ipv4}
+            - COTURN_IP=${COTURN_IP:-auto-ipv4}
 
     kms:
         image: ${KMS_IMAGE:-kurento/kurento-media-server:6.14.0}
@@ -96,4 +96,4 @@ services:
             - SUPPORT_DEPRECATED_API=${SUPPORT_DEPRECATED_API:-true}
             - REDIRECT_WWW=${REDIRECT_WWW:-false}
             - WORKER_CONNECTIONS=${WORKER_CONNECTIONS:-10240}
-            - PUBLIC_IP=${PUBLIC_IP:-auto-ipv4}
+            - PUBLIC_IP=${PROXY_PUBLIC_IP:-auto-ipv4}
