--- a/openvidu-server/deployments/pro/docker-compose/openvidu-server-pro/docker-compose.yml
+++ b/openvidu-server/deployments/pro/docker-compose/openvidu-server-pro/docker-compose.yml
@@ -41,7 +41,7 @@ services:
             - KMS_URIS=[]
             - COTURN_REDIS_IP=127.0.0.1
             - COTURN_REDIS_PASSWORD=${OPENVIDU_SECRET}
-            - COTURN_IP=${PUBLIC_IP:-auto-ipv4}
+            - COTURN_IP=${COTURN_IP:-auto-ipv4}
             - OPENVIDU_PRO_CLUSTER=true
             - OPENVIDU_PRO_KIBANA_HOST=${OPENVIDU_PRO_KIBANA_HOST:-http://127.0.0.1/kibana}
             - OPENVIDU_PRO_ELASTICSEARCH_HOST=${OPENVIDU_PRO_ELASTICSEARCH_HOST:-http://127.0.0.1:9200}
@@ -66,7 +66,7 @@ services:
             - DB_PASSWORD=${OPENVIDU_SECRET}
             - MIN_PORT=40000
             - MAX_PORT=65535
-            - TURN_PUBLIC_IP=${PUBLIC_IP:-auto-ipv4}
+            - TURN_PUBLIC_IP=${TURN_PUBLIC_IP:-auto-ipv4}
 
     nginx:
         image: openvidu/openvidu-proxy:4.0.0-dev5
@@ -90,7 +90,7 @@ services:
             - SUPPORT_DEPRECATED_API=${SUPPORT_DEPRECATED_API:-true}
             - REDIRECT_WWW=${REDIRECT_WWW:-false}
             - WORKER_CONNECTIONS=${WORKER_CONNECTIONS:-10240}
-            - PUBLIC_IP=${PUBLIC_IP:-auto-ipv4}
+            - PUBLIC_IP=${PROXY_PUBLIC_IP:-auto-ipv4}
 
 
     elasticsearch:
