--- a/openvidu-server/deployments/pro/docker-compose/openvidu-server-pro/.env
+++ b/openvidu-server/deployments/pro/docker-compose/openvidu-server-pro/.env
@@ -282,7 +282,7 @@ ELASTICSEARCH_PASSWORD=
 # Docker hub kurento media server: https://hub.docker.com/r/kurento/kurento-media-server
 # Uncomment the next line and define this variable with KMS image that you want use
 # By default, KMS_IMAGE is defined in media nodes and it does not need to be specified unless
-# you want to use an specific version of KMS
+# you want to use a specific version of KMS
 # KMS_IMAGE=kurento/kurento-media-server:6.14.0
 
 # Uncomment the next line and define this variable to change
