--- a/openvidu-server/deployments/pro/docker-compose/openvidu-server-pro/.env
+++ b/openvidu-server/deployments/pro/docker-compose/openvidu-server-pro/.env
@@ -288,7 +288,7 @@ ELASTICSEARCH_PASSWORD=
 # Uncomment the next line and define this variable to change
 # the verbosity level of the logs of KMS
 # Documentation: https://doc-kurento.readthedocs.io/en/stable/features/logging.html
-# KMS_DOCKER_ENV_KMS_DEBUG_LEVEL=3,Kurento*:4,kms*:4,sdp*:4,webrtc*:4,*rtpendpoint:4,rtp*handler:4,rtpsynchronizer:4,agnosticbin:4
+# KMS_DOCKER_ENV_GST_DEBUG=
 
 # Cloudformation configuration
 # --------------------------
