--- a/openvidu-server/deployments/ce/docker-compose/.env
+++ b/openvidu-server/deployments/ce/docker-compose/.env
@@ -165,7 +165,7 @@ OPENVIDU_CDR_PATH=/opt/openvidu/cdr
 # Uncomment the next line and define this variable to change
 # the verbosity level of the logs of KMS
 # Documentation: https://doc-kurento.readthedocs.io/en/stable/features/logging.html
-# KMS_DEBUG_LEVEL=3,Kurento*:4,kms*:4,sdp*:4,webrtc*:4,*rtpendpoint:4,rtp*handler:4,rtpsynchronizer:4,agnosticbin:4
+# KMS_DOCKER_ENV_GST_DEBUG=
 
 # Openvidu Server Level logs
 # --------------------------
