--- a/openvidu-test-e2e/jenkins/Jenkinsfile
+++ b/openvidu-test-e2e/jenkins/Jenkinsfile
@@ -43,7 +43,7 @@ node('container') {
           sh(script: '''#!/bin/bash
             cd openvidu
             if [[ $OPENVIDU_BROWSER_COMMIT != "default" ]]; then
-              git checkout $OPENVIDU_BROWSER_COMMIT
+              git checkout -f $OPENVIDU_BROWSER_COMMIT
             fi
             cd openvidu-browser
             npm install --unsafe-perm && npm run build && npm pack
@@ -56,7 +56,7 @@ node('container') {
           sh(script: '''#!/bin/bash
             cd openvidu
             if [[ $OPENVIDU_NODE_CLIENT_COMMIT != "default" ]]; then
-              git checkout $OPENVIDU_NODE_CLIENT_COMMIT
+              git checkout -f $OPENVIDU_NODE_CLIENT_COMMIT
             fi
             cd openvidu-node-client
             npm install --unsafe-perm && npm run build && npm pack
@@ -69,7 +69,7 @@ node('container') {
           sh(script: '''#!/bin/bash
             cd openvidu
             if [[ $OPENVIDU_TESTAPP_COMMIT != "default" ]]; then
-              git checkout $OPENVIDU_TESTAPP_COMMIT
+              git checkout -f $OPENVIDU_TESTAPP_COMMIT
             fi
             cd openvidu-testapp
             npm install --unsafe-perm
@@ -119,10 +119,11 @@ node('container') {
             sh(script: '''#!/bin/bash
               cd openvidu
               if [[ $OPENVIDU_TESTE2E_COMMIT != "default" ]]; then
-                git checkout $OPENVIDU_TESTE2E_COMMIT
+                git checkout -f $OPENVIDU_TESTE2E_COMMIT
               fi
               cd openvidu-test-e2e
               sudo mvn --batch-mode -Dtest=OpenViduTestAppE2eTest -DAPP_URL=https://172.17.0.1:4200/ -DOPENVIDU_URL=https://172.17.0.1:4443/ -DREMOTE_URL_CHROME=http://172.17.0.1:6666/wd/hub/ -DREMOTE_URL_FIREFOX=http://172.17.0.1:6667/wd/hub/ -DEXTERNAL_CUSTOM_LAYOUT_URL=http://172.17.0.1:5555 -DEXTERNAL_CUSTOM_LAYOUT_PARAMS=sessionId,CUSTOM_LAYOUT_SESSION,secret,MY_SECRET test
+              git checkout -f $OPENVIDU_COMMIT
             '''.stripIndent())
           }
           finally {
