--- a/openvidu-test-e2e/jenkins/Jenkinsfile
+++ b/openvidu-test-e2e/jenkins/Jenkinsfile
@@ -83,6 +83,7 @@ node('container') {
         stage('OpenVidu parent build') {
           sh 'cd openvidu/openvidu-java-client && mvn --batch-mode versions:set -DnewVersion=1.0.0-TEST'
           sh 'cd openvidu/openvidu-java-client && mvn clean compile package && cp target/openvidu-java-client*.jar /opt/openvidu/openvidu-java-client.jar'
+          sh 'cd openvidu/openvidu-test-browsers && mvn clean compile package && cp target/penvidu-test-browsers*.jar /opt/openvidu/penvidu-test-browsers.jar'
           sh 'cd openvidu && mvn --batch-mode versions:set-property -Dproperty=version.openvidu.java.client -DnewVersion=1.0.0-TEST'
           sh 'cd openvidu && mvn --batch-mode -DskipTests=true clean install'
         }
@@ -97,6 +98,7 @@ node('container') {
             cd openvidu/openvidu-server/src/dashboard && npm install --unsafe-perm && npm install /opt/openvidu/openvidu-browser-*.tgz && export NG_CLI_ANALYTICS="false" && npm run build-prod
             cd ../..
             mvn --batch-mode org.apache.maven.plugins:maven-install-plugin:3.0.0-M1:install-file -Dfile=/opt/openvidu/openvidu-java-client.jar
+            mvn --batch-mode org.apache.maven.plugins:maven-install-plugin:3.0.0-M1:install-file -Dfile=/opt/openvidu/openvidu-test-browsers.jar
             mvn --batch-mode package
             cp target/openvidu-server*.jar /opt/openvidu
         '''.stripIndent())
@@ -126,6 +128,7 @@ node('container') {
               fi
               cd openvidu-test-e2e
               mvn --batch-mode org.apache.maven.plugins:maven-install-plugin:3.0.0-M1:install-file -Dfile=/opt/openvidu/openvidu-java-client.jar
+              mvn --batch-mode org.apache.maven.plugins:maven-install-plugin:3.0.0-M1:install-file -Dfile=/opt/openvidu/openvidu-test-browsers.jar
               sudo mvn --batch-mode -Dtest=OpenViduTestAppE2eTest -DAPP_URL=https://172.17.0.1:4200/ -DOPENVIDU_URL=https://172.17.0.1:4443/ -DREMOTE_URL_CHROME=http://172.17.0.1:6666/wd/hub/ -DREMOTE_URL_FIREFOX=http://172.17.0.1:6667/wd/hub/ -DEXTERNAL_CUSTOM_LAYOUT_URL=http://172.17.0.1:5555 -DEXTERNAL_CUSTOM_LAYOUT_PARAMS=sessionId,CUSTOM_LAYOUT_SESSION,secret,MY_SECRET test
               git checkout -f $OPENVIDU_COMMIT
             '''.stripIndent())
