--- a/openvidu-test-e2e/jenkins/Jenkinsfile
+++ b/openvidu-test-e2e/jenkins/Jenkinsfile
@@ -80,11 +80,21 @@ node('container') {
             git checkout -f $OPENVIDU_COMMIT
           '''.stripIndent())
         }
+        stage('OpenVidu Java Client build') {
+          sh(script: '''#!/bin/bash
+            cd openvidu
+            if [[ $OPENVIDU_JAVA_CLIENT_COMMIT != "default" ]]; then
+              git checkout -f $OPENVIDU_JAVA_CLIENT_COMMIT
+            fi
+            cd openvidu-java-client
+            mvn --batch-mode versions:set -DnewVersion=TEST
+            mvn clean compile package
+            mvn install:install-file -Dfile=target/openvidu-java-client-TEST.jar -DgroupId=io.openvidu -DartifactId=openvidu-java-client -Dversion=TEST -Dpackaging=jar
+            git checkout -f $OPENVIDU_COMMIT
+          '''.stripIndent())
+        }
         stage('OpenVidu parent build') {
-          sh 'cd openvidu/openvidu-java-client && mvn --batch-mode versions:set -DnewVersion=1.0.0-TEST'
-          sh 'cd openvidu/openvidu-java-client && mvn clean compile package && cp target/openvidu-java-client*.jar /opt/openvidu/openvidu-java-client.jar'
-          sh 'cd openvidu/openvidu-test-browsers && mvn clean compile package && cp target/penvidu-test-browsers*.jar /opt/openvidu/penvidu-test-browsers.jar'
-          sh 'cd openvidu && mvn --batch-mode versions:set-property -Dproperty=version.openvidu.java.client -DnewVersion=1.0.0-TEST'
+          sh 'cd openvidu && mvn --batch-mode versions:set-property -Dproperty=version.openvidu.java.client -DnewVersion=TEST'
           sh 'cd openvidu && mvn --batch-mode -DskipTests=true clean install'
         }
         stage('OpenVidu Server unit tests') {
@@ -97,8 +107,6 @@ node('container') {
           sh(script: '''#!/bin/bash
             cd openvidu/openvidu-server/src/dashboard && npm install --unsafe-perm && npm install /opt/openvidu/openvidu-browser-*.tgz && export NG_CLI_ANALYTICS="false" && npm run build-prod
             cd ../..
-            mvn --batch-mode org.apache.maven.plugins:maven-install-plugin:3.0.0-M1:install-file -Dfile=/opt/openvidu/openvidu-java-client.jar
-            mvn --batch-mode org.apache.maven.plugins:maven-install-plugin:3.0.0-M1:install-file -Dfile=/opt/openvidu/openvidu-test-browsers.jar
             mvn --batch-mode package
             cp target/openvidu-server*.jar /opt/openvidu
         '''.stripIndent())
@@ -126,8 +134,8 @@ node('container') {
               if [[ $OPENVIDU_TESTE2E_COMMIT != "default" ]]; then
                 git checkout -f $OPENVIDU_TESTE2E_COMMIT
               fi
-              cd openvidu-test-e2e
-              mvn --batch-mode org.apache.maven.plugins:maven-install-plugin:3.0.0-M1:install-file -Dfile=/opt/openvidu/openvidu-java-client.jar
+              cd openvidu-test-browsers && mvn --batch-mode versions:set -DnewVersion=TEST && mvn clean compile package && cp target/openvidu-test-browsers*.jar /opt/openvidu/openvidu-test-browsers.jar
+              cd ../openvidu-test-e2e
               mvn --batch-mode org.apache.maven.plugins:maven-install-plugin:3.0.0-M1:install-file -Dfile=/opt/openvidu/openvidu-test-browsers.jar
               sudo mvn --batch-mode -Dtest=OpenViduTestAppE2eTest -DAPP_URL=https://172.17.0.1:4200/ -DOPENVIDU_URL=https://172.17.0.1:4443/ -DREMOTE_URL_CHROME=http://172.17.0.1:6666/wd/hub/ -DREMOTE_URL_FIREFOX=http://172.17.0.1:6667/wd/hub/ -DEXTERNAL_CUSTOM_LAYOUT_URL=http://172.17.0.1:5555 -DEXTERNAL_CUSTOM_LAYOUT_PARAMS=sessionId,CUSTOM_LAYOUT_SESSION,secret,MY_SECRET test
               git checkout -f $OPENVIDU_COMMIT
