--- a/openvidu-test-e2e/jenkins/Jenkinsfile
+++ b/openvidu-test-e2e/jenkins/Jenkinsfile
@@ -134,9 +134,12 @@ node('container') {
               if [[ $OPENVIDU_TESTE2E_COMMIT != "default" ]]; then
                 git checkout -f $OPENVIDU_TESTE2E_COMMIT
               fi
-              cd openvidu-test-browsers && mvn --batch-mode versions:set -DnewVersion=TEST && mvn clean compile package && cp target/openvidu-test-browsers*.jar /opt/openvidu/openvidu-test-browsers.jar
-              cd ../openvidu-test-e2e
-              mvn --batch-mode org.apache.maven.plugins:maven-install-plugin:3.0.0-M1:install-file -Dfile=/opt/openvidu/openvidu-test-browsers.jar
+              cd openvidu-test-browsers
+              mvn --batch-mode versions:set -DnewVersion=TEST && mvn clean compile package
+              mvn install:install-file -Dfile=target/openvidu-test-browsers-TEST.jar -DgroupId=io.openvidu -DartifactId=openvidu-test-browsers -Dversion=TEST -Dpackaging=jar
+              cd ..
+              mvn --batch-mode versions:set-property -Dproperty=version.openvidu.test.browsers -DnewVersion=TEST
+              cd openvidu-test-e2e
               sudo mvn --batch-mode -Dtest=OpenViduTestAppE2eTest -DAPP_URL=https://172.17.0.1:4200/ -DOPENVIDU_URL=https://172.17.0.1:4443/ -DREMOTE_URL_CHROME=http://172.17.0.1:6666/wd/hub/ -DREMOTE_URL_FIREFOX=http://172.17.0.1:6667/wd/hub/ -DEXTERNAL_CUSTOM_LAYOUT_URL=http://172.17.0.1:5555 -DEXTERNAL_CUSTOM_LAYOUT_PARAMS=sessionId,CUSTOM_LAYOUT_SESSION,secret,MY_SECRET test
               git checkout -f $OPENVIDU_COMMIT
             '''.stripIndent())
