--- a/openvidu-test-e2e/jenkins/Jenkinsfile
+++ b/openvidu-test-e2e/jenkins/Jenkinsfile
@@ -135,8 +135,7 @@ node('container') {
                 git checkout -f $OPENVIDU_TESTE2E_COMMIT
               fi
               cd openvidu-test-browsers
-              mvn --batch-mode versions:set -DnewVersion=TEST && mvn clean compile package
-              mvn install:install-file -Dfile=target/openvidu-test-browsers-TEST.jar -DgroupId=io.openvidu -DartifactId=openvidu-test-browsers -Dversion=TEST -Dpackaging=jar
+              mvn --batch-mode versions:set -DnewVersion=TEST && mvn clean install
               cd ..
               mvn --batch-mode versions:set-property -Dproperty=version.openvidu.test.browsers -DnewVersion=TEST
               cd openvidu-test-e2e
