--- a/openvidu-test-e2e/jenkins/Jenkinsfile
+++ b/openvidu-test-e2e/jenkins/Jenkinsfile
@@ -137,8 +137,10 @@ node('container') {
               cd openvidu-test-browsers
               mvn --batch-mode versions:set -DnewVersion=TEST && mvn clean install
               cd ..
+              mvn --batch-mode versions:set-property -Dproperty=version.openvidu.java.client -DnewVersion=TEST
               mvn --batch-mode versions:set-property -Dproperty=version.openvidu.test.browsers -DnewVersion=TEST
               cd openvidu-test-e2e
+              mvn -DskipTests=true clean compile
               sudo mvn --batch-mode -Dtest=OpenViduTestAppE2eTest -DAPP_URL=https://172.17.0.1:4200/ -DOPENVIDU_URL=https://172.17.0.1:4443/ -DREMOTE_URL_CHROME=http://172.17.0.1:6666/wd/hub/ -DREMOTE_URL_FIREFOX=http://172.17.0.1:6667/wd/hub/ -DEXTERNAL_CUSTOM_LAYOUT_URL=http://172.17.0.1:5555 -DEXTERNAL_CUSTOM_LAYOUT_PARAMS=sessionId,CUSTOM_LAYOUT_SESSION,secret,MY_SECRET test
               git checkout -f $OPENVIDU_COMMIT
             '''.stripIndent())
