openvidu-deployment: Same commands to access kms logs in CE and PRO. Same directory for kms logs

--- a/openvidu-server/deployments/ce/docker-compose/docker-compose.yml
+++ b/openvidu-server/deployments/ce/docker-compose/docker-compose.yml
@@ -50,10 +50,12 @@ services:
         volumes:
             - /opt/openvidu/kms-crashes:/opt/openvidu/kms-crashes
             - ${OPENVIDU_RECORDING_PATH}:${OPENVIDU_RECORDING_PATH}
+            - /opt/openvidu/kurento-logs:/opt/openvidu/kurento-logs
         environment:
             - KMS_MIN_PORT=40000
             - KMS_MAX_PORT=57000
             - GST_DEBUG=${KMS_DOCKER_ENV_GST_DEBUG:-}
+            - KURENTO_LOGS_PATH=/opt/openvidu/kurento-logs
 
     redis:
         image: openvidu/openvidu-redis:1.0.0
