--- a/openvidu-server/deployments/ce/docker-compose/docker-compose.override.yml
+++ b/openvidu-server/deployments/ce/docker-compose/docker-compose.override.yml
@@ -21,3 +21,6 @@ services:
             - OPENVIDU_URL=http://localhost:5443
             - OPENVIDU_SECRET=${OPENVIDU_SECRET}
             - CALL_OPENVIDU_CERTTYPE=${CERTIFICATE_TYPE}
+        logging:
+            options:
+                max-size: "${DOCKER_LOGS_MAX_SIZE:-100M}"
