--- a/openvidu-server/deployments/pro/docker-compose/openvidu-server-pro/docker-compose.yml
+++ b/openvidu-server/deployments/pro/docker-compose/openvidu-server-pro/docker-compose.yml
@@ -47,6 +47,9 @@ services:
             - OPENVIDU_PRO_ELASTICSEARCH_HOST=${OPENVIDU_PRO_ELASTICSEARCH_HOST:-http://127.0.0.1:9200}
             - WAIT_KIBANA_URL=${OPENVIDU_PRO_KIBANA_HOST:-http://127.0.0.1/kibana}
             - DOTENV_PATH=${PWD}
+        logging:
+            options:
+                max-size: "${DOCKER_LOGS_MAX_SIZE:-100M}"
 
     redis:
         image: openvidu/openvidu-redis:1.0.0
@@ -54,6 +57,9 @@ services:
         network_mode: host
         environment:
             - REDIS_PASSWORD=${OPENVIDU_SECRET}
+        logging:
+            options:
+                max-size: "${DOCKER_LOGS_MAX_SIZE:-100M}"
 
     coturn:
         image: openvidu/openvidu-coturn:2.0.0-dev3
@@ -67,6 +73,9 @@ services:
             - MIN_PORT=40000
             - MAX_PORT=65535
             - TURN_PUBLIC_IP=${TURN_PUBLIC_IP:-auto-ipv4}
+        logging:
+            options:
+                max-size: "${DOCKER_LOGS_MAX_SIZE:-100M}"
 
     nginx:
         image: openvidu/openvidu-proxy:4.0.0-dev5
@@ -91,6 +100,9 @@ services:
             - REDIRECT_WWW=${REDIRECT_WWW:-false}
             - WORKER_CONNECTIONS=${WORKER_CONNECTIONS:-10240}
             - PUBLIC_IP=${PROXY_PUBLIC_IP:-auto-ipv4}
+        logging:
+            options:
+                max-size: "${DOCKER_LOGS_MAX_SIZE:-100M}"
 
 
     elasticsearch:
@@ -107,6 +119,9 @@ services:
             /bin/bash -c "elasticsearch-users useradd ${ELASTICSEARCH_USERNAME} 
             -p ${ELASTICSEARCH_PASSWORD} -r superuser;
             docker-entrypoint.sh"
+        logging:
+            options:
+                max-size: "${DOCKER_LOGS_MAX_SIZE:-100M}"
 
     kibana:
         image: docker.elastic.co/kibana/kibana:7.8.0
@@ -118,6 +133,9 @@ services:
             - ELASTICSEARCH_PASSWORD=${ELASTICSEARCH_PASSWORD}
         ports:
             - 5601:5601
+        logging:
+            options:
+                max-size: "${DOCKER_LOGS_MAX_SIZE:-100M}"
 
     filebeat:
         image: docker.elastic.co/beats/filebeat-oss:7.8.0
@@ -136,3 +154,6 @@ services:
             /bin/bash -c "filebeat -e -strict.perms=false
             `if [ ! -z $ELASTICSEARCH_USERNAME ]; then echo '-E output.elasticsearch.username=$ELASTICSEARCH_USERNAME'; fi`
             `if [ ! -z $ELASTICSEARCH_PASSWORD ]; then echo '-E output.elasticsearch.password=$ELASTICSEARCH_PASSWORD'; fi`"
+        logging:
+            options:
+                max-size: "${DOCKER_LOGS_MAX_SIZE:-100M}"
