Heap Memory parametrizable

--- a/openvidu-server/deployments/pro/docker-compose/openvidu-server-pro/.env
+++ b/openvidu-server/deployments/pro/docker-compose/openvidu-server-pro/.env
@@ -258,11 +258,18 @@ OPENVIDU_CDR_PATH=/opt/openvidu/cdr
 # RECOMENDED VALUES: INFO for normal logs DEBUG for more verbose logs
 # OV_CE_DEBUG_LEVEL=INFO
 
-# Java Options
+# OpenVidu Java Options
 # --------------------------
 # Uncomment the next line and define this to add options to java command
 # Documentation: https://docs.oracle.com/cd/E37116_01/install.111210/e23737/configuring_jvm.htm#OUDIG00058
 # JAVA_OPTIONS=-Xms2048m -Xmx4096m
+
+# ElasticSearch Java Options
+# --------------------------
+# Uncomment the next line and define this to add options to java command of Elasticsearch
+# Documentation: https://docs.oracle.com/cd/E37116_01/install.111210/e23737/configuring_jvm.htm#OUDIG00058
+# By default ElasticSearch is configured to use "-Xms2g -Xmx2g" as Java Min and Max memory heap allocation
+# ES_JAVA_OPTS=-Xms2048m -Xmx4096m
 
 # Kibana And ElasticSearch Configuration
 # --------------------------
