openvidu-deployment: Default value for instances: c5.xlarge

--- a/openvidu-server/deployments/ce/aws/CF-OpenVidu.yaml.template
+++ b/openvidu-server/deployments/ce/aws/CF-OpenVidu.yaml.template
@@ -55,7 +55,7 @@ Parameters:
   InstanceType:
     Description: "Specifies the EC2 instance type for your OpenVidu instance"
     Type: String
-    Default: t2.xlarge
+    Default: c5.xlarge
     AllowedValues:
       - t2.large
       - t2.xlarge
