--- a/openvidu-server/deployments/pro/docker-compose/openvidu-server-pro/.env
+++ b/openvidu-server/deployments/pro/docker-compose/openvidu-server-pro/.env
@@ -135,6 +135,7 @@ OPENVIDU_PRO_CLUSTER_LOAD_STRATEGY=streams
 
 # Max days until delete indexes in state of rollover on Elasticsearch
 # Type number >= 0
+# Default Value is 15
 # OPENVIDU_PRO_ELASTICSEARCH_MAX_DAYS_DELETE=
 
 # Private IP of OpenVidu Server Pro
